# mission_ag3ents

./: .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json
.agents/rules/: documentation.md  general.md  llm-integration.md  llm_integration.md  project-structure.md  project_structure.md
.cursor/rules/: documentation.mdc  general.mdc  llm-integration.mdc  project-structure.mdc
common/: __init__.py  cost_report.py  events.py  hub_client.py  llm_client.py  logging_config.py  model_repository.py  prompt_loader.py  settings.py
common/llm_api/: __init__.py  cost_tracker.py  http_client_provider.py  llm_client.py  mcp_client.py  model_repository.py  schema_utils.py  tool.py  tools_loop.py
common/settings/: __init__.py  mcp_workspace_settings.py  project_settings.py
dashboard/: __init__.py  client.py  event_map.py  messages.py
dashboard/console/: __init__.py  app.py  formatters.py
mcp_servers/: __init__.py
mcp_servers/hub_answer/: TOOLS.md  __init__.py  server.py
playground/: README.md  solution.py
playground/prompts/: hello.md
playground/tools/: echo.py
task_01/: README.md  solution.py
task_01/prompts/: clasify_industries.md
task_02/: README.md  solution.py
task_02/.json/: file.json  file2.json
task_02/prompts/: find_him.md
task_02/tools/: find_shortest_distance.py  find_shortest_distance_labels.py  get_access_level.py  get_location.py  mcp_server.py
task_03/: README.md  solution.py
task_03/prompts/: packages.md
task_03/tools/: mcp_server.py
task_04/: README.md  solution.py
task_04/prompts/: agent.md  (+2 more)
task_05/: README.md  solution.py
task_06/: README.md  solution.py  solution2.py
task_07/: README.md  solution.py
(+83 files in other folders)
